[package]
name = "shit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = {version = "0.17", features = ["native-tls"]}
tokio = {version = "1.18", features = ["macros", "rt-multi-thread", "time", "sync"]}
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version =  "0.11", features = ["json"] }
